# vkccl

./: .gitignore  CMakeLists.txt  PLAN.md  README.md
.github/workflows/: ci.yml
bench/: vccl_bench.cc  vccl_vk_demo.cc
include/: vccl.h
integration/: README.md  vllm-vulkan-vccl.patch
kit/: BRINGUP-NOTES.md  README.md  build-kit.sh
python/: pyproject.toml
python/tests/: test_bindings.py  test_e2e_tp.py  test_torch_comm.py
python/vccl/: __init__.py  torch_comm.py
src/core/: bootstrap.cc  bootstrap.h  collectives.cc  comm.cc  comm.h  group.cc  reduce.cc  reduce.h  types.cc
src/transport/: tcp.cc  transport.h  verbs.cc
src/util/: deadline.h  log.cc  log.h  socket.cc  socket.h
tests/: test_bootstrap.cc  test_collectives.cc  test_dmabuf.cc  test_mrcache.cc
tools/: deploy.sh  vccl_info.cc
