[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "vccl"
version = "0.1.0"
description = "Python bindings for vccl (Vulkan Collective Communications Library)"
readme = "../README.md"
license = "Apache-2.0"
requires-python = ">=3.9"

[project.optional-dependencies]
torch = ["torch"]

[tool.setuptools.packages.find]
include = ["vccl*"]
